<resources>
    <string name="app_name">Resep Dapurku</string>

    <!--String On Boarding Layout-->

    <!--Judul-->
    <string name="first_slide_title">Cari Resep Masakan</string>
    <string name="second_slide_title">Jadi Koki di Rumah</string>
    <string name="third_slide_title">Bagikan Resep Anda</string>
    <!--Deskripsi-->
    <string name="first_slide_desc">Cari dan temukan beragam resep masakan menarik pada aplikasi ini</string>
    <string name="second_slide_desc">Semua orang bisa menjadi koki di rumah dengan memanfaatkan resep yang ada di aplikasi ini</string>
    <string name="third_slide_desc">Silahkan login untuk membagikan resep masakan yang Anda punya ke orang lain</string>

    <!--String On Login Layout-->
    <string name="greetings">Selamat Datang</string>
    <string name="sub_greetings">Silahkan login untuk mulai mencari dan membagikan resep Anda</string>
    <string name="forgot">Lupa Password?</string>
    <string name="dont_have_account">Tidak Punya Akun?</string>

    <!--String On Register Layout-->
    <string name="text_register">Daftar Akun</string>
    <string name="text_desc_register">Daftar akun baru untuk mulai berbagi dan mencari resep masakan</string>
    <string name="have_account">Sudah Punya Akun?</string>

    <!--String On Forgot Steps Layout-->
    <string name="desc_step1">Masukkan alamat email Anda untuk reset password</string>
    <string name="desc_step2">Masukkan nomor telepon Anda untuk menerima kode OTP</string>
    <string name="desc_step3">Masukkan Kode OTP yang telah dikirimkan ke nomor telepon Anda</string>
    <string name="desc_step4">Atur ulang kata sandi Anda untuk login pada aplikasi ini</string>

    <!--String On Success Layout-->
    <string name="desc_success_change">Password berhasil diperbarui!\nSilahkan login untuk lanjut menggunakan aplikasi ini</string>
    <string name="desc_success_register">Akun Anda telah berhasil dibuat, silahkan login untuk mulai menggunakan aplikasi ini</string>
    <string name="desc_success_login">Login telah berhasil dilakukan</string>

    <!--String On Dashboard Layout-->
    <string name="ask">Apa yang ingin Anda buat hari ini?</string>
    <string name="resep_terbaru">Resep Tebaru</string>
    <string name="rekomendasi">Rekomendasi Untukmu</string>
    <string name="kategori">Kategori</string>
    <string name="sharenow"><u>Bagikan Sekarang</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="searchlocation"><u>Cari Sekarang</u></string>

    <string name="aboutApp"><b>Resep Dapurku</b> merupakan sebuah aplikasi sharing resep masakan yang memudahkan para pengguna dalam mencari resep makanan.
        Selain menemukan resep, pengguna juga dapat membagikan resep buatannya yang nantinya dapat dijadikan referensi pengguna lain.</string>

    <string-array name="kategori">
        <item>Olahan Daging</item>
        <item>Seafood</item>
        <item>Sayur</item>
        <item>Kue</item>
        <item>Minuman</item>
        <item>Jajanan</item>
    </string-array>

    <string name="nama_makanan">Nama Makanan</string>
    <string name="detail">Detail</string>
    <string name="title_activity_tab_kategori">Tab_Kategori</string>
    <string name="tab_text_1">Olahan Daging</string>
    <string name="tab_text_2">Sayuran</string>
    <string name="tab_text_3">Seafood</string>
    <string name="tab_text_4">Jajanan</string>
    <string name="tab_text_5">Kue</string>
    <string name="tab_text_6">Minuman</string>
    <string name="title_activity_kategori_tab">Kategori_Tab</string>

    <string name="kategori_olahanDaging">Resep Olahan Daging</string>
    <string name="kategori_sayuran">Resep Sayuran</string>
    <string name="kategori_seafood">Resep Seafood</string>
    <string name="kategori_jajanan">Resep Jajanan</string>
    <string name="kategori_kue">Resep Kue</string>
    <string name="kategori_minuman">Resep Minuman</string>
    <string name="title_activity_test_detail">TestDetail</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>