<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Register"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="48dp"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/greetingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:fontFamily="@font/raleway_extrabold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/greetings"
            android:textColor="@color/orangeTextHeading"
            android:textSize="40sp"
            android:letterSpacing="0.03"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_desc_register"
            android:textSize="18sp"
            android:fontFamily="@font/raleway_semibold"
            android:gravity="fill_horizontal"
            android:textColor="@color/orangeButton"
            app:layout_constraintTop_toBottomOf="@id/greetingsText"
            app:layout_constraintStart_toStartOf="@id/greetingsText"
            android:layout_marginTop="50dp"
            android:letterSpacing="0.02"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullname"
            android:hint="Fullname"
            android:textColorHint="@color/orangeButton"
            style="@style/customInput"
            android:layout_marginTop="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullnameEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="Username"
            android:textColorHint="@color/orangeButton"
            style="@style/customInput"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/orangeButton">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:maxLength="20"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="Email"
            android:textColorHint="@color/orangeButton"
            style="@style/customInput">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:hint="Phone"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/orangeButton"
            style="@style/customInput"
            app:counterMaxLength="15"
            app:helperTextTextColor="@color/orangeTextHeading">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="Password"
            android:textColorHint="@color/orangeButton"
            style="@style/customInput"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/orangeButton"
            android:layout_marginTop="10dp"
            app:counterMaxLength="16"
            app:counterEnabled="true"
            app:counterTextColor="@color/orangeButton">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:maxLength="16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="80dp"
            app:cornerRadius="5dp"
            android:text="Daftar"
            android:textAllCaps="false"
            android:fontFamily="@font/raleway_bold"
            android:textSize="23sp"
            android:onClick="onClickRegister"/>
        <LinearLayout
            android:id="@+id/haveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:fontFamily="@font/raleway"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Login"
                android:textColor="@color/orangeButton"
                android:textSize="19sp"
                android:fontFamily="@font/raleway_bold"
                android:onClick="onClickLogin"
                />
        </LinearLayout>


    </LinearLayout>



</ScrollView>